--- a/frontend/kidsground/src/static/stylesheets/map.css
+++ b/frontend/kidsground/src/static/stylesheets/map.css
@@ -35,3 +35,8 @@
       width: 60vw;
     }
   }
+@media only screen and (max-width: 450px) {
+    .button-overlay{
+      font-size: 14px;
+    }
+  }
