--- a/frontend/kidsground/src/static/stylesheets/playgroundForm.css
+++ b/frontend/kidsground/src/static/stylesheets/playgroundForm.css
@@ -1,10 +1,30 @@
 .form-label {
     font-weight: bold;
-  }
+}
   
-  .text-input {
-      padding:10px;
-      border:0;
-      box-shadow:0 0 15px 4px rgba(0,0,0,0.09);
-      border-radius: 10px;
-  }
+.text-input {
+    padding:10px;
+    border:0;
+    box-shadow:0 0 15px 4px rgba(0,0,0,0.09);
+    border-radius: 10px;
+}
+
+#add-playground {
+    display: flex;
+    justify-content: center;
+}
+
+#playground-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.question {
+    display: flex;
+    flex-direction: column;
+}
+
+.choice input {
+    width: 2vw;
+}
