--- a/frontend/kidsground/src/static/stylesheets/map.css
+++ b/frontend/kidsground/src/static/stylesheets/map.css
@@ -11,6 +11,7 @@
     width: 40vw;
     background-color: white;
     font-size: 28px;
+    box-shadow: 1px 1px 5px 1px rgba(0,0,0,0.7);
   }
   
   #map {
