--- a/frontend/kidsground/src/static/stylesheets/main.css
+++ b/frontend/kidsground/src/static/stylesheets/main.css
@@ -61,6 +61,7 @@
   #map-text{
     display: flex;
     padding: 20px;
+    justify-content: start;
   }
 
   .map-page-main-text,
@@ -90,9 +91,9 @@
   }
   
   .text-with-counter {
-    flex-direction: column;
     text-align: end;
-    margin-left: 23vw;
+    width: 30vw;
+    margin-right: 3vw;
   }
 
   /* Style for the container */
