--- a/frontend/kidsground/src/static/stylesheets/main.css
+++ b/frontend/kidsground/src/static/stylesheets/main.css
@@ -175,6 +175,7 @@
   
   @media only screen and (max-width: 1280px) {
     .text-with-counter {
+        width: 95vw;
         margin-left: 0vw;
         order: 2;
         text-align: center;
@@ -199,7 +200,7 @@
   }
 }
 
-  @media only screen and (max-width: 540px) {
+  @media only screen and (max-width: 912px) {
     .add-playground-btn{
       font-size: 14px;
     }
