--- a/frontend/kidsground/src/static/stylesheets/registration.css
+++ b/frontend/kidsground/src/static/stylesheets/registration.css
@@ -6,14 +6,16 @@
 }
 
 .register-container {
+    overflow-x: hidden;
     margin-left: -1vw;
     width: 102vw;
-    height: 84vh;
+    height: 84.3vh;
     display: flex;
     align-items: center;
     justify-content: center;
     background-image: url("../background.jpg");
-    background-position: 0 100vh;
+    background-position: 0 -20vh;
+    background-repeat: no-repeat;
     background-size: cover;
     position: relative;
 } 
@@ -147,7 +149,17 @@ button:hover {
     margin-top: 2px;
 }
 
+@media only screen and (max-width: 1368px) {
+    .register-container {
+        background-position: 0 45vh; 
+        background-size: contain;
+    } 
+}
 @media only screen and (max-width: 960px) {
+    .register-container {
+        overflow-y: hidden;
+        background-position: 0 50vh; 
+    } 
     .input-field {
         font-size: 20px;
     }
@@ -158,7 +170,13 @@ button:hover {
 }
 
 @media only screen and (max-width: 768px) {
+    .register-container {
+        background-position: 0 50vh; 
+    } 
 
+    .form-box {
+        top: -5vh;
+    }
     .input-field {
         font-size: 20px;
     }
@@ -170,6 +188,11 @@ button:hover {
 }
 
 @media only screen and (max-width: 560px) {
+    .register-container {
+        width: 98vw;
+        height: 80vh;
+        background-position: 0 45vh; 
+    } 
     .input-field {
         font-size: 20px;
     }
@@ -179,7 +202,25 @@ button:hover {
     }
 }
 
+@media only screen and (max-width: 480px) {
+    .register-container {
+        width: 98vw;
+        height: 70vh;
+        background-position: 0 45vh; 
+    } 
+}
+
 @media only screen and (max-width: 380px) {
+
+    register-container {
+        width: 98vw;
+        height: 70vh;
+    }
+
+    .form-box {
+        top: 0vh;
+    }
+
     .input-field {
         font-size: 20px;
     }
