--- a/frontend/kidsground/src/static/stylesheets/playground.css
+++ b/frontend/kidsground/src/static/stylesheets/playground.css
@@ -1,5 +1,5 @@
 /* Basic styling for the circular button */
-.playground-content {
+/* .playground-content {
     position: relative;
     overflow: hidden;
     display: inline-block;
@@ -8,7 +8,9 @@
     height: 100vh;
     margin-top: 20vh;
     margin-left: 20vw;
-}
+} */
+
+@import "~react-image-gallery/styles/css/image-gallery.css";
 
 .btn {
     border: none;
@@ -17,24 +19,53 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    font-size: 24px;
-    line-height: 50px;
+    font-size: 32px;
     text-align: center;
     cursor: pointer;
-    margin-left: 10vw;
 }
 
-/* Styling for the plus icon */
-.upload-btn-wrapper .btn::before {
-    content: '+';
+#input-upload-wrapper {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-self: center;
 }
 
-.upload-btn-wrapper input[type=file] {
-    font-size: 100px;
-    position: absolute;
-    left: 0;
-    top: 0;
+#upload-wrapper {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20vw;
+    height: 20vh;
+    background-color: rgb(213, 213, 213);
+    border-radius: 12px;
+}   
+
+.upload-btn-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#upload-wrapper:hover .btn {
+    background-color: #CDEAEE;
+    color: var(--text-grey);
+}
+
+
+#input-wrapper {
     opacity: 0;
+    position: absolute;
+    width: 19%;
+    height: 84.9%;
+    border-radius: 12px;
+    cursor: pointer;
+}
+
+#upload-wrapper:hover {
+    background-color: rgb(169, 169, 169);
     cursor: pointer;
 }
 
@@ -51,7 +82,6 @@ input#file-upload-button {
     margin-top: 10px;
     font-size: 16px;
     color: #333;
-    margin-left: 8.2vw;
 }
 
 body
