--- a/frontend/kidsground/src/static/stylesheets/map.css
+++ b/frontend/kidsground/src/static/stylesheets/map.css
@@ -12,6 +12,11 @@
     background-color: white;
     font-size: 28px;
     box-shadow: 1px 1px 5px 1px rgba(0,0,0,0.7);
+    margin-top: 15px;
+    border-radius: 15px;
+    border: 0;
+    outline: 0;
+    cursor: pointer;
   }
   
   #map {
@@ -54,6 +59,10 @@
     height: 25px;
     width: 25px;
     border-radius: 50%;
+  }
+
+  #terrain:hover {
+    fill: rgb(75, 75, 75);
   }
 
 .gm-style-mtc {
