--- a/frontend/kidsground/src/static/stylesheets/navbar.css
+++ b/frontend/kidsground/src/static/stylesheets/navbar.css
@@ -6,7 +6,7 @@
     display: flex;
     align-items: center;
     text-align: center;
-    padding: 10px;
+    padding: 9px;
 }
 nav {
     background: #FCFCFC;
@@ -54,5 +54,13 @@ a:hover {
     }
     .home-wrapper{
         padding-top: 22px;
+    }
+
+    .logout-wrapper div,
+    .home-wrapper div,
+    .about-us-wrapper div, 
+    .map-wrapper div {
+        font-size: 10.8px;
+        padding: 0.1rem 0.4rem;
     }
 }
