Made some visual cahnges after changing on actual mobile device

--- a/frontend/kidsground/src/static/stylesheets/playgroundForm.css
+++ b/frontend/kidsground/src/static/stylesheets/playgroundForm.css
@@ -163,6 +163,7 @@ input[type="checkbox"]:checked::before {
 
 @media only screen and (max-width: 1280px) {
     #playground-form {
+        margin-left: -4vw;
         width: 94vw;
     }
 }
