--- a/frontend/src/static/stylesheets/styles.css
+++ b/frontend/src/static/stylesheets/styles.css
@@ -30,6 +30,11 @@ html {
   overflow-y: hidden;
 }
 
+#add-playground-btn:disabled {
+  cursor: not-allowed;
+  background-color: #cdeaee74;
+}
+
 .background {
   overflow-x: hidden;
   margin-left: -1vw;
