--- a/frontend/src/static/stylesheets/map.css
+++ b/frontend/src/static/stylesheets/map.css
@@ -69,6 +69,12 @@
   top: -18px
 }
 
+#map a{
+  padding: 0;
+  font-size: 12px;
+  color: #62BEC9;
+}
+
 .gm-style-mtc {
   display: none; /* Adjust height as needed */
 }
