--- a/frontend/src/static/stylesheets/styles.css
+++ b/frontend/src/static/stylesheets/styles.css
@@ -44,3 +44,15 @@ html {
     background-position: 0 100%;
     background-size: contain;
 }
+
+.fade-in {
+  display: inline;
+  opacity: 1;
+  transition: opacity 0.5s ease-in;
+}
+
+.fade-out {
+  display: inline;
+  opacity: 0;
+  transition: opacity 0.5s ease-out;
+}
