--- a/frontend/src/static/stylesheets/playground.css
+++ b/frontend/src/static/stylesheets/playground.css
@@ -13,6 +13,9 @@
 @import "~react-image-gallery/styles/css/image-gallery.css";
 
 .btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border: none;
     background-color: #3498db;
     color: white;
@@ -28,6 +31,7 @@
     position: relative;
     display: flex;
     justify-content: center;
+    padding: 20px;
     align-self: center;
 }
 
@@ -36,8 +40,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 15vw;
-    height: 20vh;
     border-radius: 12px;
 }   
 
@@ -47,6 +49,8 @@
     align-items: center;
     flex-direction: column;
     border: 1px solid #75a2a8;
+    padding: 20px;
+    border-radius: 12px;
     filter: drop-shadow(0 0 1rem rgb(178, 178, 178));
 }
 
@@ -59,8 +63,8 @@
 #input-wrapper {
     opacity: 0;
     position: absolute;
-    width: 15%;
-    height: 84.9%;
+    width: 4%;
+    height: 60%;
     border-radius: 12px;
     cursor: pointer;
 }
