--- a/frontend/src/static/stylesheets/map.css
+++ b/frontend/src/static/stylesheets/map.css
@@ -79,6 +79,13 @@
   display: none; /* Adjust height as needed */
 }
 
+@media only screen and (max-width: 2560px) {
+  #location {
+    bottom: 4.2vh;
+    right: 3vw;
+  }
+}
+
 @media only screen and (max-width: 1280px) {
   #map-wrapper{
       align-items: center;
