moved buttons for phones under 380

--- a/frontend/src/static/stylesheets/registration.css
+++ b/frontend/src/static/stylesheets/registration.css
@@ -205,9 +205,12 @@ button:hover {
 @media only screen and (max-width: 380px) {
 
     .register-container {
-        width: 98vw;
-        height: 70vh;
         background-position: 0 40vh; 
+    }
+
+    .btn-field button{
+        margin-top: 0vh;
+        font-size: 12px;
     }
 
     .form-box {
