--- a/frontend/src/static/stylesheets/playground.css
+++ b/frontend/src/static/stylesheets/playground.css
@@ -1,15 +1,3 @@
-/* Basic styling for the circular button */
-/* .playground-content {
-    position: relative;
-    overflow: hidden;
-    display: inline-block;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin-top: 20vh;
-    margin-left: 20vw;
-} */
-
 @import "~react-image-gallery/styles/css/image-gallery.css";
 
 .btn {
@@ -128,21 +116,42 @@ button {
     width: 1%;
 }
 
-.playground-picture {
-    height: 60vh;
-    width:90vw;
+#commentSectionWrapper {
+    display: flex;
+    justify-content: center;
 }
 
-.card {
-    margin:10px;
-    border:50px;
-    /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); */
-    transition: 0.3s;
-    width:fit-content;
+#commentSection {
+    flex-direction: column;
+    border: 1px solid #4a8f9b;
+    width: 50vw;
+    border-radius: 12px;
+    margin-bottom: 40px;
 }
 
-.card:hover {
-    /* box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2); */
+#commentField {
+    border: 1.5px solid #CDEAEE;
+    border-radius: 12px;
+    margin-bottom: 5px;
+    width: 80%;
+    margin-right: 20px;
+}
+
+#commentField, #commentFieldLabel, #commentSection h1 {
+    margin-left: 12px;
+}
+
+#commentField:focus {
+    border-width: 3px;
+}
+
+#commentButton {
+    color: var(--text-grey);
+    background-color: #CDEAEE;
+    border: 1px solid #75a2a8;
+    cursor: pointer;
+    border-radius: 15px;
+    font-size: 15px;
 }
 
 .icon {
