--- a/frontend/src/static/stylesheets/playground.css
+++ b/frontend/src/static/stylesheets/playground.css
@@ -137,7 +137,16 @@ button {
     margin-right: 20px;
 }
 
-#commentField, #commentFieldLabel, #commentSection h1 {
+.commentContent {
+    border: 1.5px solid #CDEAEE;
+    border-radius: 12px;
+    margin-bottom: 5px;
+    padding: 20px;
+    padding-left: 5px;
+    width: 80%;
+}
+
+#commentField, #commentFieldLabel, #commentSection h1, .comment {
     margin-left: 12px;
 }
 
