--- a/frontend/src/static/stylesheets/main.css
+++ b/frontend/src/static/stylesheets/main.css
@@ -261,6 +261,14 @@
     }
   }
 
+  @media only screen and (max-width: 540px) {
+    .left-inner-column,
+    .middle-inner-column, 
+    .right-inner-column {
+      width: 45vw; /* Adjusted size for the inner rectangle */
+  }
+}
+
   @media only screen and (max-width: 430px) {
     .background-img {
         margin-top: -12vh;
