approve should work

--- a/frontend/src/static/stylesheets/registration.css
+++ b/frontend/src/static/stylesheets/registration.css
@@ -131,6 +131,7 @@ button:hover {
 #registration-success {
     display:none;
     color:#CDEAEE;
+    background-color: #1D2231;
 }
 
 #wrong-credentials-msg {
