--- a/frontend/src/static/stylesheets/playground.css
+++ b/frontend/src/static/stylesheets/playground.css
@@ -15,12 +15,41 @@
     cursor: pointer;
 }
 
+.confirm-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    background-color: #3498db;
+    color: white;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    font-size: 32px;
+    text-align: center;
+    cursor: pointer;
+}
+
 #input-upload-wrapper {
     position: relative;
     display: flex;
     justify-content: center;
     padding: 20px;
     align-self: center;
+}
+
+.confirm {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    background-color: #3498db;
+    color: white;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    font-size: 32px;
+    text-align: center;
 }
 
 #upload-wrapper {
@@ -58,7 +87,6 @@
     filter: drop-shadow(0 0 1rem rgb(178, 178, 178));
 }
 
-
 #input-wrapper {
     opacity: 0;
     position: absolute;
@@ -68,7 +96,7 @@
 }
 
 #upload-wrapper:hover {
-    background-color: rgb(213, 213, 213);
+    /* background-color: rgb(213, 213, 213); */
     cursor: pointer;
 }
 
